copied and pasted updated version

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
    <h2>How Many Sweets Do We Have?</h2>
    <button id="btn-getTotalSweets">How Many Sweets</button>
 
+   <h2>Add A Sweet</h2>
+   <button id="btn-addGreenSweet">Add Green Sweet</button>
+   <ul id="new-version"></ul>
+
+   <h2>Let's Bake the Sweets</h2>
+   <button id="btn-bakeSweet">Bake Sweet</button>
+
 
    <script src="js/sweet-data.js"></script>
    <script src="js/main.js"></script>
